Solved addtional line breaks on page refresh. Caused by quill turning heading margin into br. Changed heading margin to padding.

--- a/src/Components/quill.bubble.css
+++ b/src/Components/quill.bubble.css
@@ -93,22 +93,22 @@
 
 /* Heading Styles */
   .ql-editor h1 {
-    margin-top: 40px;
+    padding-top: 40px;
     font-weight: 700;
     @apply text-h1;
   }
   .ql-editor h2 {
-    margin-top: 32px;
+    padding-top: 32px;
     font-weight: 700;
     @apply text-h2;
   }
   .ql-editor h3 {
-    margin-top: 20px;
+    padding-top: 20px;
     font-weight: 700;
     @apply text-h3;
   }
   .ql-editor h4 {
-    margin-top: 16px;
+    padding-top: 16px;
     font-weight: 700;
     @apply text-h4;
   }
